--- a/index.html
+++ b/index.html
@@ -8,20 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script>
-        const element = document.createElement("h1");
-        element.innerHTML = "Hello World from Js";
-        const root = document.getElementById("root");
-        root.appendChild(element);
-    </script> -->
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
+    <Script type= "module" src="./src/App.js"></Script>
   </body>
 </html>
